feat: create inflections page
